--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,7 +23,7 @@ jobs:
       with: 
         major_pattern: "major:"
         minor_pattern: "feat:"
-        format: "${major}.${minor}.${increment}"
+        format: "${major}.${minor}.${patch}"
       id: version
 
     - name: Docker login
