--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,21 +30,19 @@ jobs:
       env: 
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        NEW_VERSION: ${{ steps.version.outputs.version }}
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
-        echo "New version: $NEW_VERSION"
     
-  #  - name: Build Docker Image
-   #   run: |
-    #    docker build -t cristiancibrian/docker-graphql:0.0.2 .
-     #   docker build -t cristiancibrian/docker-graphql:latest .
+    - name: Build Docker Image
+      env: 
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker build -t cristiancibrian/docker-graphql:$NEW_VERSION .
+        docker build -t cristiancibrian/docker-graphql:latest .
 
-
-   # - name: Push Docker Image
-    #  run: |
-     #   docker push cristiancibrian/docker-graphql:0.0.2
-      #  docker push cristiancibrian/docker-graphql:latest
-
-    #- name: Build the Docker image
-     # run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    - name: Push Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker push cristiancibrian/docker-graphql:${{ steps.version.outputs.version }}
+        docker push cristiancibrian/docker-graphql:latest
